<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Deductive Wine Taster</string>
    <string name="blind_taste">Blind Taste</string>
    <string name="clear_form">Clear Form</string>
    <string name="clarity">Clarity/Visible Sediment</string>
    <string name="clear">Clear</string>
    <string name="hazy">Hazy</string>
    <string name="turbid">Turbid</string>
    <string name="concentration">Concentration</string>
    <string name="pale">Pale</string>
    <string name="medium">Medium</string>
    <string name="deep">Deep</string>
    <string name="color">Color</string>
    <string name="purple">Purple</string>
    <string name="ruby">Ruby</string>
    <string name="red">Red</string>
    <string name="garnet">Garnet</string>
    <string name="straw">Straw</string>
    <string name="yellow">Yellow</string>
    <string name="gold">Gold</string>
    <string name="secondary_color">Secondary Color</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="brown">Brown</string>
    <string name="silver">Silver</string>
    <string name="green">Green</string>
    <string name="copper">Copper</string>
    <string name="rim_variation">Rim Variation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="extract_stain">Extract/Staining</string>
    <string name="none">None</string>
    <string name="light">Light</string>
    <string name="heavy">Heavy</string>
    <string name="tearing">Tearing</string>
    <string name="gas_evidence">Gas Evidence</string>
    <string name="faulty">Faulty</string>
    <string name="fault_tca">TCA</string>
    <string name="fault_hydrogen_sulfide">Hydrogen Sulfide</string>
    <string name="fault_volatile_acidity">Volatile Acidity</string>
    <string name="fault_ethyl_acetate">Ethyl Acetate</string>
    <string name="fault_brett">Brett</string>
    <string name="fault_oxidization">Oxidization</string>
    <string name="fault_other">Other</string>
    <string name="intensity">Intensity</string>
    <string name="delicate">Delicate</string>
    <string name="moderate">Moderate</string>
    <string name="powerful">Powerful</string>
    <string name="age_assessment">Age Assessment</string>
    <string name="youthful">Youthful</string>
    <string name="developing">Developing</string>
    <string name="vinous">Vinous</string>
    <string name="fruit">Fruit</string>
    <string name="black">Black</string>
    <string name="citrus">Citrus</string>
    <string name="apple_pear">Apple/Pear</string>
    <string name="stone_pit">Stone/Pit</string>
    <string name="tropical">Tropical</string>
    <string name="melon">Melon</string>
    <string name="fruit_character">Fruit Character</string>
    <string name="ripe">Ripe</string>
    <string name="fresh">Fresh</string>
    <string name="tart">Tart</string>
    <string name="baked">Baked</string>
    <string name="stewed">Stewed</string>
    <string name="dried">Dried</string>
    <string name="desiccated">Desiccated</string>
    <string name="bruised">Bruised</string>
    <string name="jammy">Jammy</string>
    <string name="non_fruit">Non-Fruit</string>
    <string name="floral">Floral</string>
    <string name="vegetal">Vegetal</string>
    <string name="herbal">Herbal</string>
    <string name="spice">Spice</string>
    <string name="animal">Animal</string>
    <string name="barn">Barn</string>
    <string name="petrol">Petrol</string>
    <string name="fermentation">Fermentation</string>
    <string name="earth">Earth</string>
    <string name="forest_floor">Forest Floor</string>
    <string name="compost">Compost</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="potting_soil">Potting Soil</string>
    <string name="mineral">Mineral</string>
    <string name="wet_stone">Wet Stone</string>
    <string name="limestone">Limestone</string>
    <string name="chalk">Chalk</string>
    <string name="slate">Slate</string>
    <string name="flint">Flint</string>
    <string name="oak">Oak</string>
    <string name="old">Old</string>
    <string name="word_new">New</string>
    <string name="large">Large</string>
    <string name="small">Small</string>
    <string name="french">French</string>
    <string name="american">American</string>
    <string name="palate" tools:keep="@string/palate">Palate</string>
    <string name="sweetness">Sweetness</string>
    <string name="bone_dry">Bone Dry</string>
    <string name="dry">Dry</string>
    <string name="off_dry">Off-Dry</string>
    <string name="medium_sweet">Medium Sweet</string>
    <string name="sweet">Sweet</string>
    <string name="lusciously_sweet">Lusciously Sweet</string>
    <string name="phenolic_bitter">Phenolic/Bitter</string>
    <string name="tannin">Tannin</string>
    <string name="acid">Acid</string>
    <string name="alcohol">Alcohol</string>
    <string name="low">Low</string>
    <string name="med_minus">Medium Minus</string>
    <string name="med">Medium</string>
    <string name="med_plus">Medium Plus</string>
    <string name="high">High</string>
    <string name="body">Body</string>
    <string name="full">Full</string>
    <string name="texture">Texture</string>
    <string name="creamy">Creamy</string>
    <string name="round">Round</string>
    <string name="lean">Lean</string>
    <string name="balanced">Balanced</string>
    <string name="length_finish">Length/Finish</string>
    <string name="word_short">Short</string>
    <string name="word_long">Long</string>
    <string name="complexity">Complexity</string>
    <string name="possible_grape_varieties">Possible Grape Varieties</string>
    <string name="new_world">New World</string>
    <string name="old_world">Old World</string>
    <string name="climate">Climate</string>
    <string name="cool">Cool</string>
    <string name="warm">Warm</string>
    <string name="possible_countries">Possible Countries</string>
    <string name="age_range">Age Range</string>
    <string name="one_to_three_years">1–3 years</string>
    <string name="three_to_five_years">3–5 years</string>
    <string name="five_to_ten_years">5–10 years</string>
    <string name="ten_plus_years">10+ years</string>
    <string name="grape_variety_blend">Grape Variety/Blend</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="region_appellation">Region/Appellation</string>
    <string name="quality_regional_hierarchy">Quality/Regional Hierarchy</string>
    <string name="vintage">Vintage</string>
    <string name="world_of_origin">World of Origin</string>
    <string name="submit_final_conclusion">Submit Final Conclusion</string>
    <string name="our_guess">Our Conclusion</string>
    <string name="actual_wine">Actual Wine</string>
    <string name="save_result">Save Result</string>
    <string name="albarino" translatable="false">Albariño</string>
    <string name="cabernet_sauvignon" translatable="false">Cabernet Sauvignon</string>
    <string name="chardonnay" translatable="false">Chardonnay</string>
    <string name="chenin_blanc" translatable="false">Chenin Blanc</string>
    <string name="gamay" translatable="false">Gamay</string>
    <string name="gewurztraminer" translatable="false">Gewürztraminer</string>
    <string name="grenache" translatable="false">Grenache</string>
    <string name="malbec" translatable="false">Malbec</string>
    <string name="merlot" translatable="false">Merlot</string>
    <string name="nebbiolo" translatable="false">Nebbiolo</string>
    <string name="pinot_gris" translatable="false">Pinot Gris</string>
    <string name="pinot_noir" translatable="false">Pinot Noir</string>
    <string name="riesling" translatable="false">Riesling</string>
    <string name="sangiovese" translatable="false">Sangiovese</string>
    <string name="sauvignon_blanc" translatable="false">Sauvignon Blanc</string>
    <string name="syrah" translatable="false">Syrah</string>
    <string name="tempranillo" translatable="false">Tempranillo</string>
    <string name="torrontes" translatable="false">Torrontés</string>
    <string name="viognier" translatable="false">Viognier</string>
    <string name="zinfandel" translatable="false">Zinfandel</string>
    <string-array name="all_varieties">
        <item>@string/cabernet_sauvignon</item>
        <item>@string/gamay</item>
        <item>@string/grenache</item>
        <item>@string/malbec</item>
        <item>@string/merlot</item>
        <item>@string/nebbiolo</item>
        <item>@string/pinot_noir</item>
        <item>@string/sangiovese</item>
        <item>@string/syrah</item>
        <item>@string/tempranillo</item>
        <item>@string/zinfandel</item>
        <item>@string/albarino</item>
        <item>@string/chardonnay</item>
        <item>@string/chenin_blanc</item>
        <item>@string/gewurztraminer</item>
        <item>@string/pinot_gris</item>
        <item>@string/riesling</item>
        <item>@string/sauvignon_blanc</item>
        <item>@string/torrontes</item>
        <item>@string/viognier</item>
    </string-array>
    <string-array name="red_varieties">
        <item>@string/cabernet_sauvignon</item>
        <item>@string/gamay</item>
        <item>@string/grenache</item>
        <item>@string/malbec</item>
        <item>@string/merlot</item>
        <item>@string/nebbiolo</item>
        <item>@string/pinot_noir</item>
        <item>@string/sangiovese</item>
        <item>@string/syrah</item>
        <item>@string/tempranillo</item>
        <item>@string/zinfandel</item>
    </string-array>
    <string-array name="white_varieties">
        <item>@string/albarino</item>
        <item>@string/chardonnay</item>
        <item>@string/chenin_blanc</item>
        <item>@string/gewurztraminer</item>
        <item>@string/pinot_gris</item>
        <item>@string/riesling</item>
        <item>@string/sauvignon_blanc</item>
        <item>@string/torrontes</item>
        <item>@string/viognier</item>
    </string-array>
    <string name="argentina" translatable="false">Argentina</string>
    <string name="australia" translatable="false">Australia</string>
    <string name="chile" translatable="false">Chile</string>
    <string name="france" translatable="false">France</string>
    <string name="germany" translatable="false">Germany</string>
    <string name="italy" translatable="false">Italy</string>
    <string name="new_zealand" translatable="false">New Zealand</string>
    <string name="spain" translatable="false">Spain</string>
    <string name="united_states" translatable="false">United States</string>
    <string name="alsace" translatable="false">Alsace</string>
    <string name="burgundy" translatable="false">Burgundy</string>
    <string name="bordeaux" translatable="false">Bordeaux</string>
    <string name="loire_valley" translatable="false">Loire Valley</string>
    <string name="rhone_valley" translatable="false">Rhône Valley</string>
    <string name="south_australia" translatable="false">South Australia</string>
    <string name="western_australia" translatable="false">Western Australia</string>
    <string name="central_valley" translatable="false">Central Valley</string>
    <string name="california" translatable="false">California</string>
    <string name="victoria" translatable="false">Victoria</string>
    <string name="piedmont" translatable="false">Piedmont</string>
    <string name="oregon" translatable="false">Oregon</string>
    <string name="south_island" translatable="false">South Island</string>
    <string name="north_island" translatable="false">North Island</string>
    <string name="tuscany" translatable="false">Tuscany</string>
    <string name="rioja" translatable="false">Rioja</string>
    <string name="ribera_del_duero" translatable="false">Ribera del Duero</string>
    <string name="mosel" translatable="false">Mosel</string>
    <string name="rhein" translatable="false">Rhein</string>
</resources>