<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SelectionGroupContainer">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:text="@string/fruit_character" />

    <LinearLayout style="@style/AppTheme.SelectionGroup">

        <CheckBox
            android:id="@+id/check_palate_fruit_character_ripe"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/ripe" />

        <CheckBox
            android:id="@+id/check_palate_fruit_character_fresh"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/fresh" />

        <CheckBox
            android:id="@+id/check_palate_fruit_character_tart"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/tart" />

        <CheckBox
            android:id="@+id/check_palate_fruit_character_baked"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/baked" />

        <CheckBox
            android:id="@+id/check_palate_fruit_character_stewed"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/stewed" />

        <CheckBox
            android:id="@+id/check_palate_fruit_character_dried"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/dried" />

        <CheckBox
            android:id="@+id/check_palate_fruit_character_desiccated"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/desiccated" />

        <CheckBox
            android:id="@+id/check_palate_fruit_character_bruised"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/bruised" />

        <CheckBox
            android:id="@+id/check_palate_fruit_character_jammy"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/jammy" />
    </LinearLayout>
</LinearLayout>