<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SelectionGroupContainer">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:text="@string/faulty" />

    <LinearLayout style="@style/AppTheme.SelectionGroup">

        <CheckBox
            android:id="@+id/check_faulty_tca"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/fault_tca" />

        <CheckBox
            android:id="@+id/check_faulty_hydrogen_sulfide"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/fault_hydrogen_sulfide" />

        <CheckBox
            android:id="@+id/check_faulty_volatile_acidity"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/fault_volatile_acidity" />

        <CheckBox
            android:id="@+id/check_faulty_ethyl_acetate"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/fault_ethyl_acetate" />

        <CheckBox
            android:id="@+id/check_faulty_brett"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/fault_brett" />

        <CheckBox
            android:id="@+id/check_faulty_oxidization"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/fault_oxidization" />

        <CheckBox
            android:id="@+id/check_faulty_other"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/fault_other" />
    </LinearLayout>
</LinearLayout>