<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SelectionGroupContainer">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:text="@string/sweetness" />

    <RadioGroup
        android:id="@+id/radio_group_palate_sweetness"
        style="@style/AppTheme.SelectionGroup">

        <RadioButton
            android:id="@+id/radio_palate_sweetness_bone_dry"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/bone_dry" />

        <RadioButton
            android:id="@+id/radio_palate_sweetness_dry"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/dry" />

        <RadioButton
            android:id="@+id/radio_palate_sweetness_off_dry"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/off_dry" />

        <RadioButton
            android:id="@+id/radio_palate_sweetness_medium_sweet"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/medium_sweet" />

        <RadioButton
            android:id="@+id/radio_palate_sweetness_sweet"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/sweet" />

        <RadioButton
            android:id="@+id/radio_palate_sweetness_lusciously_sweet"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/lusciously_sweet" />
    </RadioGroup>
</LinearLayout>