<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.SelectionGroup.CheckBox">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:text="@string/fruit" />

    <LinearLayout style="@style/AppTheme.SelectionGroup">

        <CheckBox
            android:id="@+id/check_nose_fruit_citrus"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/citrus" />

        <CheckBox
            android:id="@+id/check_nose_fruit_apple_pear"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/apple_pear" />

        <CheckBox
            android:id="@+id/check_nose_fruit_stone_pit"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/stone_pit" />

        <CheckBox
            android:id="@+id/check_nose_fruit_tropical"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/tropical" />

        <CheckBox
            android:id="@+id/check_nose_fruit_melon"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/melon" />
    </LinearLayout>
</LinearLayout>