<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SelectionGroupContainer">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:text="@string/alcohol" />

    <RadioGroup
        android:id="@+id/radio_group_palate_alcohol"
        style="@style/AppTheme.SelectionGroup">

        <RadioButton
            android:id="@+id/radio_palate_alcohol_low"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/radio_palate_alcohol_med_minus"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/med_minus" />

        <RadioButton
            android:id="@+id/radio_palate_alcohol_med"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/med" />

        <RadioButton
            android:id="@+id/radio_palate_alcohol_med_plus"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/med_plus" />

        <RadioButton
            android:id="@+id/radio_palate_alcohol_high"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/high" />
    </RadioGroup>
</LinearLayout>