<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SelectionGroupContainer">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:text="@string/secondary_color" />

    <RadioGroup
        style="@style/AppTheme.SelectionGroup"
        android:id="@+id/radio_group_colorsecondary_redwine">

        <RadioButton
            android:id="@+id/radio_secondary_color_orange"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/orange" />

        <RadioButton
            android:id="@+id/radio_secondary_color_blue"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/blue" />

        <RadioButton
            android:id="@+id/radio_secondary_color_ruby"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/ruby" />

        <RadioButton
            android:id="@+id/radio_secondary_color_garnet"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/garnet" />

        <RadioButton
            android:id="@+id/radio_secondary_color_brown"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/brown" />
    </RadioGroup>
</LinearLayout>