<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SelectionGroupContainer">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:text="@string/length_finish" />

    <RadioGroup
        android:id="@+id/radio_group_palate_length_finish"
        style="@style/AppTheme.SelectionGroup"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_palate_length_finish_short"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/word_short" />

        <RadioButton
            android:id="@+id/radio_palate_length_finish_med_minus"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/med_minus" />

        <RadioButton
            android:id="@+id/radio_palate_length_finish_med"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/med" />

        <RadioButton
            android:id="@+id/radio_palate_length_finish_med_plus"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/med_plus" />

        <RadioButton
            android:id="@+id/radio_palate_length_finish_long"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/word_long" />
    </RadioGroup>
</LinearLayout>