<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SelectionGroupContainer">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:text="@string/mineral" />

    <LinearLayout style="@style/AppTheme.SelectionGroup">

        <CheckBox
            android:id="@+id/check_palate_mineral_mineral"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/mineral" />

        <CheckBox
            android:id="@+id/check_palate_mineral_wet_stone"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/wet_stone" />

        <CheckBox
            android:id="@+id/check_palate_mineral_limestone"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/limestone" />

        <CheckBox
            android:id="@+id/check_palate_mineral_chalk"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/chalk" />

        <CheckBox
            android:id="@+id/check_palate_mineral_slate"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/slate" />

        <CheckBox
            android:id="@+id/check_palate_mineral_flint"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/flint" />
    </LinearLayout>
</LinearLayout>