<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/non_fruit" />

    <RadioGroup
        style="@style/AppTheme.RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_nose_non_fruit_floral"
            style="@style/AppTheme.RadioGroup.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floral" />

        <RadioButton
            android:id="@+id/radio_nose_non_fruit_vegetal"
            style="@style/AppTheme.RadioGroup.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetal" />

        <RadioButton
            android:id="@+id/radio_nose_non_fruit_herbal"
            style="@style/AppTheme.RadioGroup.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/herbal" />

        <RadioButton
            android:id="@+id/radio_nose_non_fruit_spice"
            style="@style/AppTheme.RadioGroup.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spice" />

        <RadioButton
            android:id="@+id/radio_nose_non_fruit_animal"
            style="@style/AppTheme.RadioGroup.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal" />

        <RadioButton
            android:id="@+id/radio_nose_non_fruit_barn"
            style="@style/AppTheme.RadioGroup.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barn" />

        <RadioButton
            android:id="@+id/radio_nose_non_fruit_petrol"
            style="@style/AppTheme.RadioGroup.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petrol" />

        <RadioButton
            android:id="@+id/radio_nose_non_fruit_fermentation"
            style="@style/AppTheme.RadioGroup.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fermentation" />

    </RadioGroup>

</merge>