<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SelectionGroupContainer">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:text="@string/extract_stain" />

    <RadioGroup
        style="@style/AppTheme.SelectionGroup"
        android:id="@+id/radio_group_extractstain_redwine">

        <RadioButton
            android:id="@+id/radio_extract_stain_none"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/radio_extract_stain_light"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/radio_extract_stain_medium"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radio_extract_stain_heavy"
            style="@style/AppTheme.SelectionGroup.RadioButton"
            android:text="@string/heavy" />
    </RadioGroup>
</LinearLayout>