<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SelectionGroupContainer">

    <TextView
        style="@style/AppTheme.Text.Descriptor"
        android:text="@string/fruit" />

    <LinearLayout style="@style/AppTheme.SelectionGroup">

        <CheckBox
            android:id="@+id/check_palate_fruit_red"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/red" />

        <CheckBox
            android:id="@+id/check_palate_fruit_black"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/black" />

        <CheckBox
            android:id="@+id/check_palate_fruit_blue"
            style="@style/AppTheme.SelectionGroup.CheckBox"
            android:text="@string/blue" />
    </LinearLayout>
</LinearLayout>